# app/controllers/playlists.go
@@ -228,7 +228,23 @@ func (p *PlaylistsController) CreatePlaylist(w http.ResponseWriter, r *http.Requ
 		}
 	}
 
-	playlist, err := p.DB.Playlists.CreatePlaylistBySpotifyID(user, data.SpotifyID, data.Category, data.SubCategory, data.ImageURL, data.ThumbnailURL)
+	// Making sure we have the full user data set from the DB here
+	fullUser, err := p.DB.Users.ByID(user.ID)
+	if err != nil {
+		return errors.WithStack(err)
+	}
+
+	// Making sure that we have an up-to-date access token for making the playlist
+	// while the web app often calls this API's endpoints for refreshing the access tokens
+	// iOS and potentially other platforms can connect into the Spotify app to obtain access tokens.
+	// If we aren't using the server to update the access tokens, the server will never be aware of
+	// new access token!
+	err = p.DB.Users.UpdateAccessToken(fullUser)
+	if err != nil {
+		return errors.WithStack(err)
+	}
+
+	playlist, err := p.DB.Playlists.CreatePlaylistBySpotifyID(*fullUser, data.SpotifyID, data.Category, data.SubCategory, data.ImageURL, data.ThumbnailURL)
 	if err != nil {
 		return errors.WithStack(err)
 	}
